syntax = "proto3";

package fluence.info;

message NodeInfoRequest{}

message NodeInfo {
    string build = 1;
}

service NodeInfoRpc {
    rpc getInfo (NodeInfoRequest) returns (NodeInfo);
}